--- a/test1.html
+++ b/test1.html
@@ -1,3 +1,3 @@
 <script>
-alert ("Здесь был Вася! Вася добавил восклицательный знак!");
+alert ("Предложения принимаю по почте shamashov@mail.ru");
 </script>
